2009-03-23  Ben Van Mechelen  <me@benvm.be>

	* garmon/trouble_codes.py:
	    make trouble codes translatable, see #2707333
	    

2009-03-23  Ben Van Mechelen  <me@benvm.be>

	* aclocal.m4:
	* configure.ac:
	* data/Makefile.am:
	* garmon/__init__.py:
	* garmon/defs.py.in:
	* plugins/Makefile.am:
	    Update to the project layout
	    Install plugins in a subdir of the python module
	

2009-03-23  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	    Add an icon to all windows
    

2009-03-23  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/plugin_manager.py:
	* garmon/scheduler.py:
	* plugins/dashboard/dashboard.py:
	    All strings were not yet translatable
        Don't translate debug strings


2009-02-27  Ben Van Mechelen  <me@benvm.be>

	* aclocal.m4:
	* configure.ac:
	    Check for pygtk in configure
	

2009-02-19  Ben Van Mechelen  <me@benvm.be>

	* aclocal.m4:
	* configure.ac:
	* data/Makefile.am:
	* data/garmon.schemas:
	* garmon/defs.py.in:
	* garmon/garmon_app.py:
	* garmon/plugin_manager.py:
	* garmon/prefs.py:
	* garmon/widgets.py:
	* plugins/dashboard/dashboard.py:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	* plugins/live_data/live_data.py:
	    Get rid of gconf completely, using only ConfigParser now
	    

2009-02-18  Ben Van Mechelen  <me@benvm.be>

	* garmon/backdoor.py:
	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	* garmon/plugin.py:
	* garmon/plugin_manager.py:
	* garmon/prefs.py:
	* garmon/scheduler.py:
	* garmon/sensor.py:
	* garmon/trouble_codes.py:
	* garmon/widgets.py:
	* plugins/dashboard/dashboard.py:
	* plugins/dtc_clearer/dtc_clearer.py:
	* plugins/dtc_reader/dtc_reader.py:
	* plugins/freeze_frame_data/freeze_frame_data.py:
	* plugins/live_data/live_data.py:
	    correct license and copyright info
	    

2009-02-18  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	* garmon/__init__.py:
	* garmon/defs.py.in:
	* garmon/garmon_app.py:
	* garmon/prefs.py: